--- a/Week 1/01.Week1-Summary.md
+++ b/Week 1/01.Week1-Summary.md
@@ -1,1 +1,12 @@
+#Week 1 - review
+
+**##Day 1**
+On the first day I went through the first module called Introduction and History of AI which is a part of Microsoft AI for beginners programme. (Link: https://github.com/microsoft/AI-For-Beginners)
+I took brief notes on that course which are in this folder Week 1.
+
+I than proceeded to install VS Code and installed Python extensions. I than wrote two codes, one for the simple calculator and a code for temperature converter. I put that code in the Week 1 folder.
+
+I finished the day by setting up my GitHub account and creating this project and organizing folders within it.
+
+**##Day 2**
 
