--- a/Week 1/01.Week1-Summary.md
+++ b/Week 1/01.Week1-Summary.md
@@ -1,6 +1,6 @@
-#Week 1 - review
+Week 1 - review
 
-**##Day 1**
+**Day 1**
 On the first day I went through the first module called Introduction and History of AI which is a part of Microsoft AI for beginners programme. (Link: https://github.com/microsoft/AI-For-Beginners)
 I took brief notes on that course which are in this folder Week 1.
 
@@ -8,5 +8,5 @@ I than proceeded to install VS Code and installed Python extensions. I than wrot
 
 I finished the day by setting up my GitHub account and creating this project and organizing folders within it.
 
-**##Day 2**
+**Day 2**
 
