Update 05.Module 2 - Knowladge_Representations_&_Expert_Systems.md

--- a/Week 1/05.Module 2 - Knowladge_Representations_&_Expert_Systems.md
+++ b/Week 1/05.Module 2 - Knowladge_Representations_&_Expert_Systems.md
@@ -1,5 +1,21 @@
 # Knowledge Representation and Expert Systems
 
-Knowladge is a broad concept and its hard to define it so it is mostly aligned with other similar concepts using DIKW Pyradmid.
+Knowladge is a broad concept and its hard to define it so it is mostly aligned with other similar concepts using [DIKW Pyradmid](https://en.wikipedia.org/wiki/DIKW_pyramid).
 
+## Classifying Computer Knowladge Repersentations
+
+**Network representations** - it is a way by which a computer connects information in an information web. Instead of using thoughts it uses so called "graphs".
+
+**Object-Attribute-Value Triplets** - or attribute-value pairs are lists of triplets containing objects, attributes and values. "Object" describes what we are talking about, "Attribuute" describes it and "Value" gives it certain value.
+
+**Hierarchical Representations** - is a way of presenting information in a certain hierarchical order.
+For an example:
+
+Animal
+   └──Bird
+        └──Canary
+
+**Frame Representations** - are like structured info-cards for objects or situations, with labeled slots that hold facts, default values, or rules, all organized in a hierarchy.
+
+**Scenarios** - are special frames that describe typical sequences of events in a situation, showing what usually happens step-by-step over time.
 
