Update 05.Module 2 - Knowladge_Representations_&_Expert_Systems.md

--- a/Week 1/05.Module 2 - Knowladge_Representations_&_Expert_Systems.md
+++ b/Week 1/05.Module 2 - Knowladge_Representations_&_Expert_Systems.md
@@ -19,3 +19,13 @@ Animal
 
 **Scenarios** - are special frames that describe typical sequences of events in a situation, showing what usually happens step-by-step over time.
 
+**Procedural Representations** - describe knowledge as a set of actions or steps that should be carried out when certain conditions are met.
+
+**Production Rules** - are if-then statements that let a system make decisions or draw conclusions based on specific conditions.
+
+**Procedures** are step-by-step actions or instructions that tell a system what to do in response to certain situations or goals.
+
+**Algorithms** are precise, step-by-step instructions used to solve a problem or complete a task from start to finish.
+
+
+
