--- a/Week 1/01.Week1-Summary.md
+++ b/Week 1/01.Week1-Summary.md
@@ -9,4 +9,5 @@ I than proceeded to install VS Code and installed Python extensions. I than wrot
 I finished the day by setting up my GitHub account and creating this project and organizing folders within it.
 
 ## **Day 2**
-
+On the second day I took a deep dive into python to remind myself of certain things I learned in highschool.
+With the help of chatbots like ChatGPT, DeepSeek, Grok etc. I wrote and organized code for a simple Contact Book that can be found in Week 1 folder.
