Update 07. Module 3 - Neural Networks.md

--- a/Week 1/07. Module 3 - Neural Networks.md
+++ b/Week 1/07. Module 3 - Neural Networks.md
@@ -3,7 +3,7 @@
 Neural networks are a part of a larger discipline callend **Machine Learning**, whose goal is to use data to train computer models that are able to solve problems.
 In Machine Learning, we assume that we have some dataset of examples X, and corresponding output values Y. Examples are often N-dimensional vectors that consist of features, and outputs are called labels.
 
-## Two most common machine learning problems:
+**Two most common machine learning problems:**
   - Classification: we need to classify an input object into two or more classes
   - Regression: we need to predict a numerical number for each of the input samples
 
@@ -48,3 +48,66 @@ The gradient descent algorithm would remain the same, but it would be more diffi
 
 ∂ℒ/∂w2 = (∂ℒ/∂σ)(∂σ/∂z2)(∂z2/∂w2)
 ∂ℒ/∂w1 = (∂ℒ/∂σ)(∂σ/∂z2)(∂z2/∂α)(∂α/∂z1)(∂z1/∂w1)
+
+## Neural Network Frameworks
+
+**What We Need to Train Neural Networks**
+To train a neural network well, we need two main things:
+
+  - **Work with Tensors** – Do math stuff (like adding, multiplying) and use functions (like sigmoid or softmax) on tensors (fancy arrays of numbers).
+
+  - **Compute Gradients** – Figure out how much to tweak the model to make it better (gradient descent).
+
+**Numpy** can handle the math, but it doesn’t do gradients automatically.
+
+In the past, we had to code all the gradient calculations ourselves (like in the backward method). A good framework should do this for us.
+
+**Why GPUs Matter**
+Training big neural networks takes a ton of calculations.
+
+GPUs (or TPUs) speed things up by doing many calculations at once (parallelizing).
+
+A good framework should let us use GPUs easily.
+
+**Popular Frameworks: TensorFlow vs. PyTorch**
+
+Both do similar things but in slightly different ways:
+________________________________________
+Level	        TensorFlow	    PyTorch
+________________________________________
+Low-Level	    TensorFlow	    PyTorch
+________________________________________
+High-Level	  Keras	PyTorch   Lightning
+________________________________________
+
+  - Low-Level API: Gives you full control. You build a computational graph (a roadmap for how data flows and gets       processed). Good for research or custom models.
+
+  - High-Level API: Makes life easier. Just stack layers like Lego blocks and call fit() to train. Best for standard neural networks.
+
+You can mix both—use high-level for most things but drop into low-level when you need more control.
+
+## Overfitting – When Your Model is "Memorizing" Instead of "Learning"
+
+**Imagine fitting a curve to some points:**
+  - Good Fit (Left): A simple line that captures the trend. Fewer parameters → generalizes well.
+  - Overfit (Right): A super complex curve that hits every point but fails on new data. Too many parameters → memorizes noise instead of learning the real pattern.
+
+**Why Overfitting Happens**
+  1. **Not enough training data** → Model memorizes instead of generalizing.
+  2. **Model is too powerful** → Too many parameters for the data.
+  3. **Noisy data** → Model learns the noise instead of the real pattern.
+
+**How to Spot Overfitting:**
+  - **Training error** keeps dropping (even to near zero).
+  - **Validation error** starts rising after a point.
+  - **Graph hint:** If validation error goes up while training error goes down → Overfitting!
+
+**How to Stop Overfitting**
+  1. Get more training data (if possible).
+  2. Simplify the model (fewer layers/parameters).
+  3. Use regularization (like Dropout, which we’ll cover later).
+
+**Bias vs. Variance Tradeoff**
+  - **Bias (Underfitting):** Model is too simple → Can’t learn well.
+  - **Variance (Overfitting):** Model is too complex → Memorizes noise.
+  - **Goal:** Find the sweet spot where the model learns the pattern without overcomplicating things.
