--- a/Week 1/01.Week1-Summary.md
+++ b/Week 1/01.Week1-Summary.md
@@ -11,3 +11,21 @@ I finished the day by setting up my GitHub account and creating this project and
 ## **Day 2**
 On the second day I took a deep dive into python to remind myself of certain things I learned in highschool.
 With the help of chatbots like ChatGPT, DeepSeek, Grok etc. I wrote and organized code for a simple Contact Book that can be found in Week 1 folder.
+
+## **Day 3**
+On the third day I covered classes and objects in Python. For practice created a student list and went through the third module of AI for beginners course by Microsoft.
+Went through NumPy course as well.
+
+## **Day 4**
+Started watching Harvard CS50 AI Start course - lecture 0.
+Cloned the codebase and did Degrees.py task.
+
+## **Day 5**
+I spent whole day looking into making a chatbot but turned out way harder than I thought so I made one that is not AI as it has no intelligence.
+
+## **Day 6**
+Nothing much happend on day 6 as I was still looking into this chatbot.
+
+## **Day 7**
+Day 7 was a review of the last week and letting it all sink in.
+
