--- a/Week 2 /01.Week2-Summary.md
+++ b/Week 2 /01.Week2-Summary.md
@@ -1,1 +1,5 @@
+## **Day 8**
+I watched and took notes on google's course Introduction to Large Language Models.
+I explored tokens and all my notes can be found here.
 
+## **Day 9**
